[gd_scene load_steps=10 format=3 uid="uid://3uwfdgtjcycp"]

[ext_resource type="Texture2D" uid="uid://bqpigyw785jsl" path="res://Sprites/scenario_full (1).png" id="1_fubs5"]
[ext_resource type="PackedScene" uid="uid://1mc6vd80w5vm" path="res://Bodies/player.tscn" id="1_pwpy3"]
[ext_resource type="Script" path="res://Codes/Level.gd" id="1_pyi4n"]
[ext_resource type="PackedScene" uid="uid://bbv0kld4skrcl" path="res://Bodies/spawner.tscn" id="4_ojvv7"]
[ext_resource type="FontFile" uid="uid://g4k0vgcg2i10" path="res://Font/PrStart.ttf" id="5_lclui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqpv6"]
size = Vector2(897, 34)

[sub_resource type="Animation" id="Animation_oq5wa"]
resource_name = "Parallax"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenarioFull:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 200), Vector2(-300, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenarioFull2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(900, 200), Vector2(300, 200)]
}

[sub_resource type="Animation" id="Animation_6ag5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenarioFull:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenarioFull2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(900, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djxoq"]
_data = {
"Parallax": SubResource("Animation_oq5wa"),
"RESET": SubResource("Animation_6ag5q")
}

[node name="Level" type="Node"]
script = ExtResource("1_pyi4n")

[node name="ScenarioFull" type="Sprite2D" parent="."]
position = Vector2(300, 200)
texture = ExtResource("1_fubs5")

[node name="ScenarioFull2" type="Sprite2D" parent="."]
position = Vector2(900, 200)
texture = ExtResource("1_fubs5")

[node name="Player" parent="." instance=ExtResource("1_pwpy3")]
position = Vector2(35, 282)

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(0, 317)

[node name="ColorRect" type="ColorRect" parent="Platform"]
visible = false
offset_left = -87.0
offset_top = -17.0
offset_right = 805.0
offset_bottom = 23.0

[node name="shape" type="CollisionShape2D" parent="Platform"]
position = Vector2(358.5, -1)
shape = SubResource("RectangleShape2D_pqpv6")

[node name="Spawner" parent="." instance=ExtResource("4_ojvv7")]

[node name="Parallax" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_djxoq")
}

[node name="Speed_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Score_timer" type="Timer" parent="."]
autostart = true

[node name="Score" type="Label" parent="."]
offset_left = 8.0
offset_top = 1.0
offset_right = 232.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("5_lclui")
text = "Score: 0000000"

[node name="Hi_score" type="Label" parent="."]
offset_left = 369.0
offset_top = 2.0
offset_right = 641.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("5_lclui")
text = "HiScore: 00000"

[connection signal="timeout" from="Speed_timer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="Score_timer" to="." method="_on_score_timer_timeout"]
